--- a/routing/package.json
+++ b/routing/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@esri/arcgis-rest-request": "^4.3.0",
-    "@esri/arcgis-rest-routing": "^4.0.3"
+    "@esri/arcgis-rest-routing": "^4.0.3",
+    "@esri/calcite-components": "^3.0.3"
   }
 }
